[package]
authors = ["apx"]
name = "katharsis"
version = "0.1.0"

[dependencies]
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
iso_country = "0.1.2"
json = "0.11.6"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = "0.2.6"
scoped_threadpool = "0.1.7"
serde_derive = "1.0.2"
serde_json = "1.0.1"
time = "0.1.37"
